--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mongodb": "^6.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "redis": "^4.6.12"
   }
 }
