--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_HOST=localhost
 DB_NAME=homework
 DB_PORT=5432
 SECRET_KEY=HAEJU0930
+AWS_ACCESS_KEY_ID=AKIA2UXHT6JZH3BEGAWV
+AWS_SECRET_ACCESS_KEY=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
