--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@redis/client": "^1.5.13",
+    "aws-sdk": "^2.1544.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -8,6 +9,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
     "node-cron": "^3.0.3",
